@@ -89,8 +89,8 @@ BRANCH_RELEASE()
 	then
 		sed -i "s/$PATTERN/$REPLACEMENT/g" build_kernel.sh
 		sed -i "s/$PATTERN/$REPLACEMENT/g" initramfs/default.prop
-		sed -i "s/$PATTERN/$REPLACEMENT/g" Kernel/update/META-INF/com/google/android/updater-script
-		sed -i "s/$PATTERN/$REPLACEMENT/g" Kernel/update/META-INF/com/android/metadata
+		sed -i "s/$PATTERN/$REPLACEMENT/g" update/META-INF/com/google/android/updater-script
+		sed -i "s/$PATTERN/$REPLACEMENT/g" update/META-INF/com/android/metadata
 		sed -i "s/$PATTERN/$REPLACEMENT/g" ncBuildHelper.sh
 		sed -i "s/$PATTERN/$REPLACEMENT/g" featurelist
 		sed -i "s/$PATTERN/$REPLACEMENT/g" changelog
@@ -99,8 +99,8 @@ BRANCH_RELEASE()
 	else
 		sed -i "s/$PATTERN/$REPLACEMENT/g" build_kernel.sh
 		sed -i "s/$PATTERN/$REPLACEMENT/g" initramfs/default.prop >/dev/null 2>&1
-		sed -i "s/$PATTERN/$REPLACEMENT/g" Kernel/update/META-INF/com/google/android/updater-script >/dev/null 2>&1
-		sed -i "s/$PATTERN/$REPLACEMENT/g" Kernel/update/META-INF/com/android/metadata >/dev/null 2>&1
+		sed -i "s/$PATTERN/$REPLACEMENT/g" update/META-INF/com/google/android/updater-script >/dev/null 2>&1
+		sed -i "s/$PATTERN/$REPLACEMENT/g" update/META-INF/com/android/metadata >/dev/null 2>&1
 		sed -i "s/$PATTERN/$REPLACEMENT/g" ncBuildHelper.sh >/dev/null 2>&1
 		sed -i "s/$PATTERN/$REPLACEMENT/g" featurelist >/dev/null 2>&1
 		sed -i "s/$PATTERN/$REPLACEMENT/g" changelog >/dev/null 2>&1
@@ -112,8 +112,8 @@ BRANCH_RELEASE()
 	then
 		git add build_kernel.sh
 		git add initramfs/default.prop
-		git add Kernel/update/META-INF/com/google/android/updater-script
-		git add Kernel/update/META-INF/com/android/metadata
+		git add update/META-INF/com/google/android/updater-script
+		git add update/META-INF/com/android/metadata
 		git add ncBuildHelper.sh
 		git add featurelist
 		git add changelog
@@ -122,8 +122,8 @@ BRANCH_RELEASE()
 	else
 		git add build_kernel.sh >/dev/null 2>&1
 		git add initramfs/default.prop >/dev/null 2>&1
-		git add Kernel/update/META-INF/com/google/android/updater-script >/dev/null 2>&1
-		git add Kernel/update/META-INF/com/android/metadata >/dev/null 2>&1
+		git add update/META-INF/com/google/android/updater-script >/dev/null 2>&1
+		git add update/META-INF/com/android/metadata >/dev/null 2>&1
 		git add ncBuildHelper.sh >/dev/null 2>&1
 		git add featurelist >/dev/null 2>&1
 		git add changelog >/dev/null 2>&1
